Correccion de back, separacion de odontologo de persona